--- a/template/base.html
+++ b/template/base.html
@@ -2,8 +2,8 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Macbook Windows 键盘快捷键">
-    <meta name="description" content="键盘快捷键">
+    <meta name="keywords" content="我想变回人">
+    <meta name="description" content="我想变回人">
     <meta name="Copyright" content="2014-2017 Muxistudio">
     {% block header %}{% endblock %}
     {% block css %}{% endblock %}
