--- a/template/index.ejs
+++ b/template/index.ejs
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Keyboard{% endblock %}
+{% extends "base.html" %} {% block title %}我想变回人{% endblock %}
  {% block script %}
 <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
     <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
