--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Keyboard{% endblock %}
+{% extends "base.html" %} {% block title %}我想变回人{% endblock %}
  {% block script %}
 
     <script src="/dist/index.js"></script>
