--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %} {% block title %}我想变回人{% endblock %}
+{% block css %}<link rel="stylesheet" type="text/css" href="/static/css/index.css">{% endblock %}
+
  {% block script %}
 
     <script src="/dist/index.js"></script>
