--- a/template/BE.html
+++ b/template/BE.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block title %}我想变回人{% endblock %}
+{% block css %}<link rel="stylesheet" type="text/css" href="/static/css/BE.css">{% endblock %}
 {% block script %}
 
    <script src="/dist/BE.js"></script>
