--- a/template/HE.html
+++ b/template/HE.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block title %}我想变回人{% endblock %}
+{% block css %}<link rel="stylesheet" type="text/css" href="/static/css/HE.css">{% endblock %}
 {% block script %}
 
    <script src="/dist/HE.js"></script>
